Chart js z-index fix

--- a/src/scss/components/main.scss
+++ b/src/scss/components/main.scss
@@ -5,6 +5,7 @@
     justify-content: center;
     flex-direction: column;
     @include adaptiveValue('gap',48,24);
+    z-index: -1;
 }
 
 .main-block{
